# carobra-rewards

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 20260624_implement_customer_persistence_model.py
docs/: customer-intake-demo-walkthrough.md
openspec/changes/archive/2026-06-24-implement-customer-persistence-model/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-add-customer-intake-request-id/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-handle-active-afore-curp-nss-conflict/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-implement-simulated-customer-intake-flow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-25-unify-customer-intake-http-error-schema/: design.md  proposal.md  tasks.md
openspec/specs/customer-persistence-model/: spec.md
openspec/specs/simulated-customer-intake-flow/: spec.md
scripts/: __init__.py  demo_customer_intake.py
src/carobra_rewards/: __init__.py  main.py
src/carobra_rewards/api/: __init__.py  dependencies.py  router.py
src/carobra_rewards/api/v1/: __init__.py  router.py
src/carobra_rewards/core/: config.py
src/carobra_rewards/infrastructure/database/: __init__.py  base.py  session.py  verify_connection.py
src/carobra_rewards/modules/: __init__.py
src/carobra_rewards/modules/customer_intake/: __init__.py
tests/: __init__.py  conftest.py  test_demo_customer_intake.py  test_health.py  test_neon_connection.py
tests/modules/customer_intake/: integration_support.py  test_application_service.py  test_module_boundaries.py  test_postgres_persistence.py
(+37 files in other folders)
