[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "carobra-rewards"
version = "0.1.0"
description = "Backend foundation for Carobra Rewards."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16.2,<2.0.0",
  "asyncpg>=0.30.0,<0.31.0",
  "fastapi>=0.116.0,<0.117.0",
  "greenlet>=3.2.3,<4.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "sqlalchemy>=2.0.41,<2.1.0",
  "uvicorn>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29.0",
  "pyright>=1.1.403,<2.0.0",
  "pytest>=8.4.1,<9.0.0",
  "pytest-asyncio>=1.0.0,<2.0.0",
  "ruff>=0.12.0,<0.13.0",
]

[project.scripts]
carobra-rewards-verify-neon = "carobra_rewards.infrastructure.database.verify_connection:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carobra_rewards"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: marks tests that require external services or credentials",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = [".uv-cache", ".uv-python", ".venv"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "SIM",
  "UP",
  "W",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportUnusedImport = true
reportUnusedVariable = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
